# 3BLD_analytic_generator

./: .gitignore  .inputrc  .requirements.txt.un~  DF.csv  FL.csv  FR.csv  LICENCE  RDB.csv  RDF.csv  README.md  UB.csv  UBL.csv  UFR.csv  UL.csv  UR.csv  app.py  comms.py  convert_list_to_comms.py  drill_generator.py  drill_save.json  edge_flip_distrobution.py  edges_only_scrambles.py  eli_comms.py  expand_comm.py  generate_memo.py  get_scrambles.py  linux_dev_requirements.txt  main.py  main.py~  main_funcs.py  max_comms.json  max_comms.py  memo_cube.py  multiscram.txt  pandr.py  pyproject.toml  requirements.txt  scramble.txt  scramble_generator_corners.py  scramble_generator_edges.py  (+7 more)
Commutator/: comm_shift.py  convert_list_to_comms.py  expand_comm.py  invert_solution.py  validate_comms.py
Cube/: __init__.py  cube.py  cube_data.db  dlin_float.py  drill.py  face_enum.py  letterscheme.py  memo.py  solution.py
Scramble/: get_scramble.py
Settings/: settings.py
Spreadsheets/: Awynndgo BLD.xlsx  Elliott Full Floating + More.xlsx  Graham's Full 3Style Comm Series + more.xlsx  Max Hilliard 3BLD.xlsx  __init__.py  ingest_spreadsheet.py  pandr.py  possible_buffers.json  possible_buffers.py
Test/: test.py
commands/: __init__.py  alger.py  cycle_break_float.py  drill_buffer.py  drill_cycle_break.py  drill_ltct.py  drill_piece_buffer.py  drill_sticker.py  drill_twists.py  drill_two_flips.py  get_buffer.py  get_comm.py  get_comm_loop.py  get_help.py  get_query.py  get_rand_buff.py  load_comms.py  memo.py  memo_cube.py  set_letter_scheme.py
comms/: comms.py  comms.py~
database/: button.py  cube_data.db  database.py  database_interface.py
dlin/: __init__.py  cube.py  piece.py  tracer.py
drill_lists/: drill_list_corners.txt  drill_list_corners2.txt  drill_list_edges.txt
operations/: __init__.py  alger.py  cycle_break_float.py  drill_buffer.py  drill_twists.py  get_buffer.py  get_comm_loop.py  get_help.py  memo.py  memo_cube.py  set_letter_scheme.py
save for later/: all_rud_edge_comms  (+15 more)
(+113 files in other folders)
